--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,21 @@
+* {
+	font-family: 'Lato' !important;
+}
+
 img {
 	width: 100%;
 }
 
 .landing {
 	position: relative;
-	background: url('./img/showcase.jpg') no-repeat;
+	background: #00b4db; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #0083b0, #00b4db); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(
+		to right,
+		#0083b0,
+		#00b4db
+	); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 	background-size: cover;
 	background-position: center;
 	height: 100vh;
@@ -17,7 +28,7 @@ img {
 }
 
 .dark-overlay {
-	background-color: rgba(0, 0, 0, 0.7);
+	background-color: rgba(0, 0, 0, 0.144);
 	position: absolute;
 	top: 0;
 	left: 0;
